Fix spacing of sidebar menus.

--- a/src/sass/_accordeon.scss
+++ b/src/sass/_accordeon.scss
@@ -1,7 +1,7 @@
 .accordeon__section-label {
     width: 100%;
     box-sizing: border-box;
-    padding: 0  0 0 5px;
+    padding: 0  5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
