--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -80,7 +80,7 @@
     line-height: 2.25;
     border-bottom: 1px solid $color-border;
     margin: 0;
-    padding: 0.5em 0 8px 0;
+    padding: 0;
 
     & .icon {
       display: none;
